2008-05-29  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/update-notifier.c (setup_alarm): Set the Gconf value for
	check_interval to the default value if no key was found (N76679).

2008-05-29  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/log.cc (save_log): Don't unescape nor convert the passed URI
	to a local path, just store it as it is (N80933).
	(log_response): Add the "file://" prefix when needed (N80933).

	* src/util.cc (show_file_chooser_for_save): Use an URI instead of
	a local path for setting the current folder for the file chooser,
	that is, use gtk_file_chooser_set_current_folder_uri (N80933).

2008-05-29  Felipe Erias Morandeira  <femorandeira@maemo.org>

	* src/apt-worker.cc (myDPkgPM::CheckDownloadedPkgs): Code
	cleaning.
	(cmd_download_package): The cache is not reset after downloading
	packages.

	* src/operations.cc (ip_download_cur_reply): We show a pulsating
	progress bar to the user while the packages that are going to be
	installed are checked (N85962).

2008-05-28  Marius Vollmer  <marius.vollmer@nokia.com>

	Released 2.1.12

	* src/settings.h, src/settings.cc (red_pill_ignore_wrong_domains):
	New.  Do all the right things with it.
	* src/apt-worker-client.cc (start_apt_worker): Include 'D' in
	options according to red_pill_ignore_wrong_domains.

	* src/apt-worker.cc (cmd_get_package_info): Only gather the flags
	of packages that are related to the current operation, but also
	include packages that will be reinstalled or configured.
	(flag_allow_wrong_domains): New.
	(myPolicy::GetCandidateVer): Use it to control whether versions
	from a wrong domain get rejected.
	(main): Set flag_allow_wrong_domains from the new 'D' option.

	* src/util.h, src/util.cc (volume_path_is_mounted)
	(volume_path_is_mounted_writable): Renamed former to latter,
	changed all users.  Don't call call_copy_cont, that is just wrong.
	Return FALSE for volumes that are mounted but read-only (N85947).
